--- a/Analyzing-NYC-TLC-Green-Car-Enhanced.ipynb
+++ b/Analyzing-NYC-TLC-Green-Car-Enhanced.ipynb
@@ -1256,12 +1256,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "loc = df_loc[[\"LocationID\", \"zone\", \"borough\"]]\n",
     "df_q1 = df_q1.merge(loc, left_on=\"LocationID\", right_on=\"LocationID\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LocationID</th>\n",
+       "      <th>zone</th>\n",
+       "      <th>borough</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Newark Airport</td>\n",
+       "      <td>EWR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Jamaica Bay</td>\n",
+       "      <td>Queens</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Allerton/Pelham Gardens</td>\n",
+       "      <td>Bronx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Alphabet City</td>\n",
+       "      <td>Manhattan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Arden Heights</td>\n",
+       "      <td>Staten Island</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LocationID                     zone        borough\n",
+       "0           1           Newark Airport            EWR\n",
+       "1           2              Jamaica Bay         Queens\n",
+       "2           3  Allerton/Pelham Gardens          Bronx\n",
+       "3           4            Alphabet City      Manhattan\n",
+       "4           5            Arden Heights  Staten Island"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LocationID</th>\n",
+       "      <th>PUcount</th>\n",
+       "      <th>DOcount</th>\n",
+       "      <th>TOTALcount</th>\n",
+       "      <th>zone</th>\n",
+       "      <th>borough</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>1898.0</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>Newark Airport</td>\n",
+       "      <td>EWR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>Jamaica Bay</td>\n",
+       "      <td>Queens</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5410.0</td>\n",
+       "      <td>6048.0</td>\n",
+       "      <td>11458.0</td>\n",
+       "      <td>Allerton/Pelham Gardens</td>\n",
+       "      <td>Bronx</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>6054.0</td>\n",
+       "      <td>6274.0</td>\n",
+       "      <td>Alphabet City</td>\n",
+       "      <td>Manhattan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>191.0</td>\n",
+       "      <td>Arden Heights</td>\n",
+       "      <td>Staten Island</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LocationID  PUcount  DOcount  TOTALcount                     zone  \\\n",
+       "0           1    103.0   1898.0      2001.0           Newark Airport   \n",
+       "1           2     33.0     70.0       103.0              Jamaica Bay   \n",
+       "2           3   5410.0   6048.0     11458.0  Allerton/Pelham Gardens   \n",
+       "3           4    220.0   6054.0      6274.0            Alphabet City   \n",
+       "4           5     63.0    128.0       191.0            Arden Heights   \n",
+       "\n",
+       "         borough  \n",
+       "0            EWR  \n",
+       "1         Queens  \n",
+       "2          Bronx  \n",
+       "3      Manhattan  \n",
+       "4  Staten Island  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_q1.head()"
    ]
   },
   {
